--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@
 /* CSS Document */
 
 body,td,th,p{
-	font-family: Arial, Helvetica, sans-serif;
+	font-family: Garamond, Helvetica, sans-serif;
 	font-size: 10pt;
 	color: #333;
 	line-height: 1.5;
@@ -136,11 +136,12 @@ nav h1 a {
   margin: 0;
   padding: 30px 15px 60px;
   text-align: center;
+	font-family: garamond;
 }
 #restaurants-list li {
-  background-color: #fff;
+  background-color: #ffb914;
   border: 2px solid #ccc;
-  font-family: Arial,sans-serif;
+  font-family: Garamond, sans-serif;
   margin: 15px;
   min-height: 380px;
   padding: 0 30px 25px;
@@ -157,7 +158,7 @@ nav h1 a {
 }
 #restaurants-list li h1 {
   color: #f18200;
-  font-family: Arial,sans-serif;
+  font-family: garamond,sans-serif;
   font-size: 14pt;
   font-weight: 200;
   letter-spacing: 0;
@@ -167,12 +168,12 @@ nav h1 a {
 }
 #restaurants-list p {
   margin: 0;
-  font-size: 11pt;
+  font-size: 20pt;
 }
 #restaurants-list li a {
-  background-color: orange;
+  background-color: white;
   border-bottom: 3px solid #eee;
-  color: #fff;
+  color: black;
   display: inline-block;
   font-size: 10pt;
   margin: 15px 0 0;
@@ -180,6 +181,7 @@ nav h1 a {
   text-align: center;
   text-decoration: none;
   text-transform: uppercase;
+
 }
 
 /* ====================== Restaurant Details ====================== */
@@ -272,4 +274,11 @@ nav h1 a {
 }
 #restaurant-hours td {
   color: #666;
+}
+.wrapper {
+	width: 100%;
+	margin: 0 auto;
+  width: 50%;
+  min-width: 320px;
+  margin: 0;
 }
