--- a/css/styles.css
+++ b/css/styles.css
@@ -2,8 +2,8 @@
 /* CSS Document */
 
 body,td,th,p{
-	font-family: Garamond, Helvetica, sans-serif;
-	font-size: 10pt;
+	font-family: garamond, Helvetica, sans-serif;
+	font-size: 14px;
 	color: #333;
 	line-height: 1.5;
 }
@@ -14,7 +14,7 @@ body {
 }
 ul, li {
 	font-family: Arial, Helvetica, sans-serif;
-	font-size: 10pt;
+	font-size: 1.0em;
 	color: #333;
 }
 a {
