--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,9 @@
 @charset "utf-8";
 /* CSS Document */
 
-body,td,th,p{
-	font-family: Garamond, Helvetica, sans-serif;
-	font-size: 14px;
+body,td,th,p{ /*style for body and paragraphs*/
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 17px;
 	color: #333;
 	line-height: 1.5;
 }
@@ -13,8 +13,8 @@ body {
 	position:relative;
 }
 ul, li {
-	font-family: Garamond, Helvetica, sans-serif;
-	font-size: 1.0em; /*relative unit*/
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 1.0em; /*relative unit instead of pt*/
 	color: #333;
 }
 a {
@@ -26,10 +26,10 @@ a:hover, a:focus {
 	text-decoration: none;
 }
 a img{
-	border: none 0px #fff;
+	border: none 0px #fff; /*border of image*/
 }
-h1, h2, h3, h4, h5, h6 {
-  font-family: garamond, Helvetica, sans-serif;
+h1, h2, h3, h4, h5, h6 { /*styling the headings*/
+  font-family: Arial, Helvetica, sans-serif;
   margin: 0 0 20px;
 }
 article, aside, canvas, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
@@ -39,10 +39,10 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
   background-color: #f3f3f3;
   min-height: 100%;
 }
-#footer {
+#footer { /*styling of footer at end of page*/
   background-color: #444;
   color: #aaa;
-  font-size: 0.8em;
+  font-size: 0.8em; /*relative unit*/
   letter-spacing: 1px;
   padding: 25px;
   text-align: center;
@@ -50,35 +50,34 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
 }
 /* ====================== Navigation ====================== */
 nav {
-	display: flex; /*check what it does*/
+	display: flex; /*will change size according to the space available in the container*/
   width: 100%;
   height: 80px;
-  background-color: grey;
+  background-color: #444;
   text-align:center;
 }
 nav h1 {
   margin: auto;
 }
-nav h1 a {
+nav h1 a { /*text/link in the navigation bar*/
   color: #fff;
   font-size: 1em;
   font-weight: 200;
   letter-spacing: 10px;
   text-transform: uppercase;
 }
-#breadcrumb {
+#breadcrumb { /*bar with 'home' and name of restaurant*/
     padding: 10px 40px 16px;
     list-style: none;
     background-color: #eee;
     font-size: 17px;
     margin: 0;
-    /*width: calc(50% - 80px);*/
 }
 
 /* Display list items side by side */
 #breadcrumb li {
     display: inline;
-		font-size: 0.9em;
+		font-size: 0.9em; /*relative unit*/
 }
 
 /* Add a slash symbol (/) before/behind each list item */
@@ -106,13 +105,13 @@ nav h1 a {
   background-color: #ccc;
 }
 /* ====================== Restaurant Filtering ====================== */
-.filter-options {
+.filter-options { /*filter options bar styling*/
 	padding: 10px 0 3px;
 	text-align: center;
 	align-items: center;
   width: 100%;
   height: auto;
-  background-color: #3397DB;
+  background-color: #444;
 
 }
 .filter-options h2 {
@@ -122,11 +121,11 @@ nav h1 a {
   line-height: 1;
   margin: 0 20px;
 }
-.filter-options select {
+.filter-options select { /*filter options*/
   background-color: white;
   border: 1px solid #fff;
-  font-family: Garamond,sans-serif;
-  font-size: 1.1em;
+  font-family: Arial,sans-serif;
+  font-size: 1.1em; /*relative unit*/
   height: 35px;
   letter-spacing: 0;
   margin: 10px;
@@ -136,8 +135,8 @@ nav h1 a {
 
 /* ====================== Restaurant Listing ====================== */
 #restaurants-list {
-	display: flex; /*check*/
-	flex-wrap: wrap; /*check*/
+	display: flex; /*to change size based on space available in container*/
+	flex-wrap: wrap;
 	align-items: center;
 	justify-content: center;
   background-color: #f3f3f3;
@@ -145,21 +144,21 @@ nav h1 a {
   margin: 0;
   padding: 30px 15px 60px;
   text-align: center;
-	font-family: garamond;
+
 }
 #restaurants-list li {
-	display: flex;
-	flex-direction: column; /*check*/
+	display: flex; /*change size based on space available in container*/
+	flex-direction: column; /*restaurant lists are to be arranged as columns*/
   background-color: #ffb914;
   border: 2px solid #ccc;
-  font-family: Garamond, sans-serif;
+  font-family: Arial, sans-serif;
   margin: 15px;
   min-height: 380px;
   padding: 0 0px 15px;
   text-align: left;
   max-width: 85%;
 }
-#restaurants-list .restaurant-img {
+#restaurants-list .restaurant-img { /*restaurant images*/
   background-color: #ccc;
   display: block;
   margin: 0;
@@ -168,9 +167,9 @@ nav h1 a {
   min-width: 100%;
 }
 #restaurants-list li h1 {
-  color: #f18200;
-  font-family: garamond,sans-serif;
-  font-size: 1.3em;
+  color: black;
+  font-family: Arial,sans-serif;
+  font-size: 1.3em; /*relative unit*/
   font-weight: 200;
   letter-spacing: 0;
   line-height: 1.3;
@@ -181,14 +180,14 @@ nav h1 a {
 }
 #restaurants-list p {
   margin: 0;
-  font-size: 1.1em;
+  font-size: 1.1em; /*relative unit*/
 	padding: 0 20px;
 	width: 55%;
 }
-#restaurants-list li a {
-  background-color: white;
+#restaurants-list li a { /*link to the restaurant details*/
+  background-color: #444;
   border-bottom: 3px solid #eee;
-  color: black;
+  color: white;
   display: inline-block;
   font-size: 1.0em;
   margin: 15px 0 0;
@@ -201,42 +200,32 @@ nav h1 a {
 
 /* ====================== Restaurant Details ====================== */
 .inside{
-	display: flex;
+	display: flex; /*change size based on space available in container*/
 	flex-direction: row;
-	flex-flow: wrap;
+	flex-flow: wrap; /*wrap data according to space*/
 	width: 100%;
 }
 .inside header {
-
   width: 100%;
-
 }
 .inside #map-container {
-  /*background: blue none repeat scroll 0 0;*/
-  height: 270px;
-  position: relative; /*check*/
-  /*right: 0;
-  top: 80px;*/
-  width: 100%;
+  position: relative;
+  width: 100%; /*to increase responsiveness*/
+	height: 270px;
 }
-.inside #map {
+.inside #map { /*map of the individual restaurant*/
   background-color: #ccc;
   height: 100%;
   width: 100%;
 }
-/*.inside #footer {
-  bottom: 0;
-  position: absolute;
-  width: 50%;
-}*/
 #restaurant-container{
 	position: relative;
 	width: 100%;
 }
-#restaurant-name {
+#restaurant-name { /*display of name of restaurant*/
   color: #f18200;
-  font-family: garamond,sans-serif;
-  font-size: 2.0em;
+  font-family: Arial,sans-serif;
+  font-size: 2.0em; /*relative unit*/
   font-weight: 200;
   letter-spacing: 0;
   margin: 15px 0 30px;
@@ -245,34 +234,34 @@ nav h1 a {
 }
 #restaurant-img {
 	width: 100%;
+
 }
-#restaurant-address {
-  font-size: 1.2em;
+#restaurant-address { /*address of restaurant*/
+  font-size: 1.2em; /*relative unit*/
   margin: 10px 0px;
 }
-#restaurant-cuisine {
+#restaurant-cuisine { /*bar for cuisine of restaurant*/
   background-color: #333;
   color: #ddd;
-  font-size: 1.2em;
+  font-size: 1.2em; /*relative unit*/
   font-weight: 300;
   letter-spacing: 10px;
   margin: 0 0 20px;
   padding: 2px 0;
   text-align: center;
   text-transform: uppercase;
-	/*width: 90%;*/
 }
 #restaurant-container, #reviews-container {
   border-bottom: 1px solid #d9d9d9;
   border-top: 1px solid #fff;
   padding: 40px 30px;
-  /*width: 50%;*/
 }
 #reviews-container {
   padding: 30px 40px 80px;
+
 }
 #reviews-container h2 {
-  color: #f58500;
+  color: black;
   font-size: 2.4em;
   font-weight: 300;
   letter-spacing: -1px;
@@ -281,28 +270,117 @@ nav h1 a {
 #reviews-list {
   margin: 0;
   padding: 0;
+
 }
 #reviews-list li {
-  background-color: #fff;
-    border: 2px solid #f3f3f3;
+  background-color: #ffb914;
+    border: 5px solid #444;
   display: block;
   list-style-type: none;
   margin: 0 0 30px;
   overflow: hidden;
   padding: 20px 20px;
   position: relative;
-  /*width: 85%;*/
 }
 #reviews-list li p {
   margin: 0 0 10px;
 }
+
+#reviews-list li p:nth-child(1) { /*name of reviewer*/.
+font-size: 1.2em;
+	width: 50%;
+  line-height: 1;
+  display: inline-block;
+
+}
+#reviews-list li p:nth-child(2) { /*date of birth of restaurant*/
+font-size: 0.9em;
+	width: 50%;
+  display: inline-block;
+  line-height: 1;
+  text-align: right;
+}
+#reviews-list li p:nth-child(3) {/*the rating of the restaurant*/
+  color: black;
+  text-align: right;
+}
 #restaurant-hours td {
   color: #666;
 }
-.wrapper {
-	width: 100%;
-	margin: 0 auto;
-  width: 50%;
-  min-width: 320px;
-  margin: 0;
+.inside #footer {
+  width: 100%;
 }
+
+/* media queries to make the page more responsive to different screen sizes*/
+
+@media (min-width: 460px){
+	.filter-options{
+		text-align: left; /*if the device width is greater than 460px, the filter bar options go to the left of the screen*/
+	}
+}
+@media (min-width: 640px) and (max-width: 930px){ /*if the width of the device lies in this range*/
+	#restaurants-list li{
+		max-width: 42%; /*decreasing the width of the lists, so that more lists can fit in the page when the width of the page increases*/
+	}
+	#restaurants-list li h1 {
+	    height: 40px;
+	  }
+}
+@media (min-width: 930px){ /*if the device width goes above this value*/
+	#restaurants-list li {
+		max-width: 30%; /*decreasing the width of the lists, so that more can fit on the page*/
+	}
+	#restaurants-list p {
+		width: 66%;
+	}
+	#restaurants-list li h1 { /*heading size*/
+	    height: 41px;
+	  }
+
+
+	  .inside #map-container {
+	    background: blue none repeat scroll 0 0; /*when page is scrolled, map remains fixed*/
+	    height: 88%;
+	    position: fixed;
+	    right: 0;
+	    top: 80px;
+	    width: 50%; /*taking half of the web page*/
+	  }
+		.inside header {
+	    position: fixed;
+	    top: 0;
+	    width: 100%;
+	    z-index: 1000; /*for positioned elements and overlapping*/
+	  }
+
+	  #restaurant-img { /*the restaurant image*/
+	    width: 90%;
+	  }
+		#breadcrumb { /*the bar with 'home' and name of restaurant*/
+		 width: 45%;
+	 }
+	  #restaurant-container {
+	    width: 50%;
+	    padding: 140px 40px 30px;
+	  }
+	  #reviews-container { /*the reviews of the customers*/
+	    width: 50%; /*half the page*/
+	    padding: 40px 30px;
+
+	  }
+
+	  #reviews-list li {
+	    width: 85%;
+
+	  }
+		#restaurant-cuisine { /*bar with cuisine of restaurant*/
+			width: 90%;
+		}
+	  .inside #footer { /*footer of the page*/
+	    bottom: 0;
+	    position: absolute;
+	    width: 46.8%;
+	  }
+
+
+		}
