--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,7 @@
 
 body,td,th,p { /*style for body and paragraphs*/
 	font-family: Arial, Helvetica, sans-serif;
-	font-size: 17px;
+	font-size: 12.5px;
 	color: #333;
 	line-height: 1.5;
 }
@@ -113,6 +113,7 @@ nav h1 a { /*text/link in the navigation bar*/
   height: auto;
   background-color: #444;
 }
+
 .filter-options h2 {
   color: white;
   font-size: 1rem;
@@ -120,6 +121,7 @@ nav h1 a { /*text/link in the navigation bar*/
   line-height: 1;
   margin: 0 20px;
 }
+
 .filter-options select { /*filter options*/
   background-color: white;
   border: 1px solid #fff;
@@ -201,7 +203,7 @@ nav h1 a { /*text/link in the navigation bar*/
 }
 
 /* ====================== Restaurant Details ====================== */
-.inside{
+.inside {
 	display: flex; /*change size based on space available in container*/
 	flex-direction: row;
 	flex-flow: wrap; /*wrap data according to space*/
@@ -224,15 +226,10 @@ nav h1 a { /*text/link in the navigation bar*/
   width: 100%;
 }
 
-#restaurant-container{
-	position: relative;
-	width: 100%;
-}
-
-#restaurant-name { /*display of name of restaurant*/
+#restaurant-name {
   color: #f18200;
   font-family: Arial,sans-serif;
-  font-size: 2.0em; /*relative unit*/
+  font-size: 2.0em;
   font-weight: 200;
   letter-spacing: 0;
   margin: 15px 0 30px;
@@ -244,15 +241,15 @@ nav h1 a { /*text/link in the navigation bar*/
 	width: 100%;
 }
 
-#restaurant-address { /*address of restaurant*/
-  font-size: 1.2em; /*relative unit*/
+#restaurant-address {
+  font-size: 1.2em;
   margin: 10px 0px;
 }
 
-#restaurant-cuisine { /*bar for cuisine of restaurant*/
+#restaurant-cuisine {
   background-color: #333;
   color: #ddd;
-  font-size: 1.2em; /*relative unit*/
+  font-size: 1.2em;
   font-weight: 300;
   letter-spacing: 10px;
   margin: 0 0 20px;
@@ -266,12 +263,9 @@ nav h1 a { /*text/link in the navigation bar*/
   border-top: 1px solid #fff;
   padding: 40px 30px;
 }
-
 #reviews-container {
   padding: 30px 40px 80px;
-
 }
-
 #reviews-container h2 {
   color: black;
   font-size: 2.4em;
@@ -287,7 +281,7 @@ nav h1 a { /*text/link in the navigation bar*/
 
 #reviews-list li {
   background-color: #ffb914;
-  border: 5px solid #444;
+    border: 2px solid #444;
   display: block;
   list-style-type: none;
   margin: 0 0 30px;
@@ -300,34 +294,32 @@ nav h1 a { /*text/link in the navigation bar*/
   margin: 0 0 10px;
 }
 
-#reviews-list li p:nth-child(1) { /*name of reviewer*/.
-font-size: 1.2em;
+#reviews-list li p:nth-child(1) { /*name of reviewer*/
+
+  font-size: 1.2em;
 	width: 50%;
-  line-height: 1;
+	line-height: 1;
   display: inline-block;
 }
 
-#reviews-list li p:nth-child(2) { /*date of birth of restaurant*/
-  font-size: 0.9em;
-	width: 50%;
+#reviews-list li p:nth-child(2) { /*date of review*/
+	font-size: 0.9em;
+  width: 50%;
   display: inline-block;
   line-height: 1;
   text-align: right;
-}
 
-#reviews-list li p:nth-child(3) {/*the rating of the restaurant*/
+}
+#reviews-list li p:nth-child(3) { /*rating of restaurant*/
   color: black;
   text-align: right;
 }
-
 #restaurant-hours td {
   color: #666;
 }
-
 .inside #footer {
   width: 100%;
 }
-
 /* media queries to make the page more responsive to different screen sizes*/
 
 @media (min-width: 460px) {
@@ -353,43 +345,43 @@ font-size: 1.2em;
 	#restaurants-list li h1 { /*heading size*/
 	    height: 41px;
 	}
-	  .inside #map-container {
-	    background: blue none repeat scroll 0 0; /*when page is scrolled, map remains fixed*/
-	    height: 88%;
-	    position: fixed;
-	    right: 0;
-	    top: 80px;
-	    width: 50%; /*taking half of the web page*/
-	  }
-		.inside header {
-	    position: fixed;
-	    top: 0;
-	    width: 100%;
-	    z-index: 1000; /*for positioned elements and overlapping*/
-	  }
-	  #restaurant-img { /*the restaurant image*/
-	    width: 90%;
-	  }
-		#breadcrumb { /*the bar with 'home' and name of restaurant*/
+	.inside header {
+		position: fixed;
+		top: 0;
+		width: 100%;
+		z-index: 1000; /*for positioned elements and overlapping*/
+	}
+	 .inside #map-container {
+	   background: blue none repeat scroll 0 0; /*when page is scrolled, map remains fixed*/
+	   height: 88%;
+	   position: fixed;
+	   right: 0;
+	   top: 80px;
+	   width: 50%; /*taking half of the web page*/
+	}
+		#restaurant-container {
+		 width: 50%;
+		 padding: 140px 40px 30px;
+	}
+	 #breadcrumb { /*the bar with 'home' and name of restaurant*/
 		  width: 45%;
-	 }
-	  #restaurant-container {
-	    width: 50%;
-	    padding: 140px 40px 30px;
-	  }
-	  #reviews-container { /*the reviews of the customers*/
+  }
+	#restaurant-img { /*the restaurant image*/
+	    width: 90%;
+	}
+  #reviews-container { /*the reviews of the customers*/
 	    width: 50%; /*half the page*/
 	    padding: 40px 30px;
-	  }
-	  #reviews-list li {
+	}
+  #reviews-list li {
 	    width: 85%;
-	  }
-		#restaurant-cuisine { /*bar with cuisine of restaurant*/
+	}
+	#restaurant-cuisine { /*bar with cuisine of restaurant*/
 			width: 90%;
-		}
-	  .inside #footer { /*footer of the page*/
+	}
+	.inside #footer { /*footer of the page*/
 	    bottom: 0;
 	    position: absolute;
 	    width: 46.8%;
-	  }
+	}
 }
